Fix for z-index of data table.

--- a/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
+++ b/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
@@ -116,7 +116,6 @@
   --dtt_table-wrapper-height: var(--kup-data-table_table-wrapper-height, auto);
 
   position: relative;
-  z-index: 0;
 }
 
 //-------- Fixed columns and rows declarations --------
